--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,17 @@
     tools:context="com.example.jh.drygoods.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <com.example.jh.drygoods.gank.refresh.RefreshLayout
+       android:id="@+id/id_swipe_ly"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+       <ListView
+           android:id="@+id/id_listview"
+           android:divider="@color/colorDivider"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+       </ListView>
+   </com.example.jh.drygoods.gank.refresh.RefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
