--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <!--<color name="colorPrimary">#3F51B5</color>-->
+    <color name="colorPrimary">#dea385</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <!--分割线颜色-->
+    <color name="colorDivider">#ffffff</color>
+
+    <color name="colorTitle">#aa000000</color>
+    <color name="colorTag">#80000000</color>
+    <color name="colorVia">#80000000</color>
+
 </resources>
