--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="colorTitle">#aa000000</color>
     <color name="colorTag">#80000000</color>
     <color name="colorVia">#80000000</color>
+    <color name="colorSaveNormal">#40000000</color>
+    <color name="colorSavePress">#90000000</color>
 
 </resources>
